# ImageProccesor

./: CMakeLists.txt  Controller.cpp  Controller.h  Exception.h  Filters.cpp  Filters.h  README.md  ReadingChangedPicture.cpp  ReadingChangedPicture.h  project.cpp  structur.h
Tests/: test.cpp
catch/: catch_main.cpp
